tests/snapshots/snapshots__details_layout.snap
---
source: tests/snapshots.rs
assertion_line: 145
expression: h.screen()
---
┌My PRs (3)────────────────────────────┐┌Merge queue───────────────────────────┐┌Main builds───────────────────────────┐┌Deployed──────────────────────────────┐
│▌ ✗ #4821 Retry webhook delivery w… 2h││fetching…                             ││fetching…                             ││no [[repo.deploy]] configured         │
│▌   webapp · webhook-retry-backoff · …││                                      ││                                      ││                                      │
│▌   ✗ api / test                      ││                                      ││                                      ││                                      │
│  ● #4830 Add rate limit headers t… 2h││                                      ││                                      ││                                      │
│    auth                              ││                                      ││                                      ││                                      │
│    checks: pending                   ││                                      ││                                      ││                                      │
│  ○ #4790 Spike: parallel test run… 2h││                                      ││                                      ││                                      │
│    webapp · draft                    ││                                      ││                                      ││                                      │
│    checks: none                      ││                                      ││                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘
┌#4821 Retry webhook delivery with backoff─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│#4821 acme/webapp  webhook-retry-backoff  +12 −3                                                                                                              │
│review: approved  merge: blocked                                                                                                                              │
│✗ api / test                                                                                                                                                  │
│✓ lint                                                                                                                                                        │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
refreshed just now                                                                                                                       ▪─▪─▪▸ conveyor v0.12.1
