tests/snapshots/snapshots__empty_layout.snap
---
source: tests/snapshots.rs
expression: h.screen()
---
┌My PRs (0)────────────────────────────┐┌Merge queue───────────────────────────┐┌Main builds───────────────────────────┐┌Deployed──────────────────────────────┐
│no open pull requests                 ││fetching…                             ││fetching…                             ││no [[repo.deploy]] configured         │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘
refreshed just now                                                                                                                       ▪─▪─▪▸ conveyor v0.12.1
