tests/snapshots/snapshots__filter_layout.snap
---
source: tests/snapshots.rs
assertion_line: 138
expression: h.screen()
---
┌My PRs (3)────────────────────────────┐┌Merge queue───────────────────────────┐┌Main builds───────────────────────────┐┌Deployed──────────────────────────────┐
│▌ ✗ #4821 Retry webhook delivery w… 2h││fetching…                             ││fetching…                             ││no [[repo.deploy]] configured         │
│▌   webapp · webhook-retry-backoff · …││                                      ││                                      ││                                      │
│▌   ✗ api / test                      ││                                      ││                                      ││                                      │
│  ● #4830 Add rate limit headers t… 2h││                                      ││                                      ││                                      │
│    auth                              ││                                      ││                                      ││                                      │
│    checks: pending                   ││                                      ││                                      ││                                      │
│  ○ #4790 Spike: parallel test run… 2h││                                      ││                                      ││                                      │
│    webapp · draft                    ││                                      ││                                      ││                                      │
│    checks: none                      ││                                      ││                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘
/r  3/3                                                                                                                                  ▪─▪─▪▸ conveyor v0.12.1
