tests/snapshots/snapshots__help_layout.snap
---
source: tests/snapshots.rs
expression: h.screen()
---
┌Keys──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│q        quit                                                                                                                                                 │
│j/k ↓/↑  move                                                                                                                                                 │
│h/l Tab  focus column                                                                                                                                         │
│p        open pull request                                                                                                                                    │
│b        open build                                                                                                                                           │
│y/Y      copy pull request / build URL                                                                                                                        │
│d        details                                                                                                                                              │
│C-d/C-u  scroll details                                                                                                                                       │
│z        zoom the column                                                                                                                                      │
│Esc      leave zoom                                                                                                                                           │
│/        filter                                                                                                                                               │
│r/R      refresh focused / all                                                                                                                                │
│?        help                                                                                                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
any key returns
