tests/snapshots/snapshots__loading_layout.snap
---
source: tests/snapshots.rs
expression: h.screen()
---
┌My PRs────────────────────────────────┐┌Merge queue───────────────────────────┐┌Main builds───────────────────────────┐┌Deployed──────────────────────────────┐
│fetching…                             ││fetching…                             ││fetching…                             ││no [[repo.deploy]] configured         │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
│                                      ││                                      ││                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘
                                                                                                                                         ▪─▪─▪▸ conveyor v0.13.1
