tests/snapshots/snapshots__queue_details_layout.snap
---
source: tests/snapshots.rs
expression: h.screen()
---
┌My PRs (3)────────────────────────────┐┌Queue webapp (2)──────────────────────┐┌Main builds───────────────────────────┐┌Deployed──────────────────────────────┐
│  ✗ #4821 Retry webhook delivery w… 2h││▌ ● #4821 Retry webhook delivery … 12m││fetching…                             ││no [[repo.deploy]] configured         │
│    webapp · webhook-retry-backoff · …││▌   alice · position 1 · enqueued 20m…││                                      ││                                      │
│    ✗ api / test                      ││▌   run 312 · running · 00000000      ││                                      ││                                      │
│  ● #4830 Add rate limit headers t… 2h││  ○ #4830 Add rate limit heade… queued││                                      ││                                      │
│    auth                              ││    carol · position 2 · enqueued 20m…││                                      ││                                      │
│    checks: pending                   ││    no merge-group run yet · jump · 0…││                                      ││                                      │
│  ○ #4790 Spike: parallel test run… 2h││                                      ││                                      ││                                      │
│    webapp · draft                    ││                                      ││                                      ││                                      │
│    checks: none                      ││                                      ││                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘
┌#4821 Retry webhook delivery with backoff─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│#4821 by alice  position 1  checks  eta 12m                                                                                                                   │
│enqueued 20m ago                                                                                                                                              │
│00000000000000000000000000000000000012d5                                                                                                                      │
│run 312  running  2h  started at 06:00:00  by github-merge-queue[bot]                                                                                         │
│jobs: loading…                                                                                                                                                │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
refreshed just now                                                                                                                       ▪─▪─▪▸ conveyor v0.12.1
