tests/snapshots/snapshots__tabs_layout.snap
---
source: tests/snapshots.rs
expression: h.screen()
---
My PRs (3) │ Merge queue │ Main builds │ Deployed                               
┌──────────────────────────────────────────────────────────────────────────────┐
│▌ ✗ #4821 Retry webhook delivery with backoff                               2h│
│▌   webapp · webhook-retry-backoff · approved · +12 −3                        │
│▌   ✗ api / test                                                              │
│  ● #4830 Add rate limit headers to the API                                 2h│
│    auth                                                                      │
│    checks: pending                                                           │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
refreshed just now                                       ▪─▪─▪▸ conveyor v0.12.1
