tests/snapshots/snapshots__zoom_layout.snap
---
source: tests/snapshots.rs
assertion_line: 191
expression: h.screen()
---
┌My PRs (3)────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│▌ ✗ #4821 Retry webhook delivery with backoff                                                                                                               2h│
│▌   webapp · webhook-retry-backoff · approved · +12 −3                                                                                                        │
│▌   ✗ api / test                                                                                                                                              │
│  ● #4830 Add rate limit headers to the API                                                                                                                 2h│
│    auth                                                                                                                                                      │
│    checks: pending                                                                                                                                           │
│  ○ #4790 Spike: parallel test runner                                                                                                                       2h│
│    webapp · draft                                                                                                                                            │
│    checks: none                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
refreshed just now                                                                                                                       ▪─▪─▪▸ conveyor v0.12.1
